--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "mustache-express": "^1.2.8"
+    "mustache-express": "^1.2.8",
+    "socket.io": "^2.2.0"
   }
 }
